Added EmberJS code to hookup Auth0 Authenitcation

--- a/app/assets/javascripts/templates/_nav.hbs
+++ b/app/assets/javascripts/templates/_nav.hbs
@@ -18,5 +18,24 @@
       <li class="divider"></li>
     </ul>
 
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="divider"></li>
+  
+      <li class="divider show-for-small"></li>
+      {{#if App.UserInfo.signedIn}}
+        <ul class="user">
+          <li><img {{bindAttr src=App.UserInfo.picture}} alt=""></li>
+          <li><p>{{App.UserInfo.name}}</p></li> 
+          <li class="has-form">
+            {{#link-to 'logout' }}Logout{{/link-to}}
+          </li>    
+        </ul>
+      {{else}}
+        <li class="has-form">
+          {{#link-to 'login' class="button"}}Login{{/link-to}}
+        </li>
+      {{/if}}
+    </ul>
   </section>
 </nav>
