--- a/app/assets/javascripts/templates/components/auth0-login.hbs
+++ b/app/assets/javascripts/templates/components/auth0-login.hbs
@@ -1,7 +1,27 @@
 <div class="row">
   <div class="small-6 small-centered columns">
-    <h4>Login with Twitter or Github</h4>
+    {{#if login}}
+      <h3>Login</h3>
+      <form {{action login on="submit"}}>
+        {{input value=email placeholder="Email Address"}}
+        {{input value=password type="password" placeholder="Password"}}
+        <button type="submit">Login</button>
+        <a href="#" {{action toggleLogin}}>or sign up</a>
+      </form>
+
+    {{else}}
+      <h3>Sign Up</h3>
+      <form {{action signUp on="submit"}}>
+        {{input value=createEmail placeholder="Email Address"}}
+        {{input value=createPassword type="password" placeholder="Password"}}
+        <button type="submit">Sign Up</button>
+        <a href="#" {{action toggleLogin}}>or login</a>
+      </form>
+      
+    {{/if}}
+    <h4>Login with Twitter, Github or Fitbit</h4>
     <button {{action 'twitter'}}><i class="icon-twitter-sign"></i> Twitter</button>
     <button {{action 'github'}}><i class="icon-google-plus-sign"></i> Github</button>
+    <button {{action 'fitbit'}}><i class="icon-google-plus-sign"></i> FitBit</button>
   </div>
 </div>
